--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a onclick="showPage('home')">Accueil</a>
             <a onclick="showPage('reconversion')">Ma reconversion</a>
-            <a onclick="goToWorks()">Mes outils</a>
+            <a onclick="goToWorks()">Mes projets</a>
             <a onclick="showPage('contact')">Contact</a>
         </nav>
     </header>
@@ -56,7 +56,7 @@
         </section>
 
         <section class="featured-works" id="works">
-            <h2 style="margin-bottom: 40px; font-size: 24px;">Mes outils développés</h2>
+            <h2 style="margin-bottom: 40px; font-size: 24px;">Mes projets développés</h2>
 
             <div class="work-item">
                 <div class="work-thumbnail">
